[package]
name = "redirects"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
csv="1.1"
data-encoding = "2.3"
flate2 = "1.0"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
sha-1 = "0.10"
simplelog = "0.11"
tempfile = "3"
thiserror = "1.0"
